--- a/dinig.html
+++ b/dinig.html
@@ -11,7 +11,7 @@
 <header class="bg-dark fixed-top ">
   <div class="row text-light  ">
     <div class=" col-4  col-md-5  pl-5 p-3">
-      <h4 class="my-3 ">Wood Art</h4>
+      <h4 class="my-3 name-wood ">Wood Art</h4>
     </div>
     <div class="col-md-7 col-8 p-3 pl-5 my-auto">
       <nav class="navbar navbar-expand-lg navbar-light bg-dark">
