--- a/Order.html
+++ b/Order.html
@@ -65,11 +65,11 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputEmail4">Name</label>
-        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+        <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
       </div>
       <div class="form-group col-md-6">
         <label for="inputPassword4">Email</label>
-        <input type="password" class="form-control" id="inputPassword4" placeholder="Email">
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
       </div>
     </div>
     
