--- a/living.html
+++ b/living.html
@@ -10,10 +10,10 @@
 <body>
 <header class="bg-dark fixed-top ">
   <div class="row text-light  ">
-    <div class="col-md-5 col-4 pl-5 p-3">
-      <h4 class="my-3 name-wood ">Wood Art</h4>
+    <div class="col-md-5 col-5 pl-5 p-3">
+      <h4 class="name-wood my-3">Wood Art</h4>
     </div>
-    <div class="col-md-7 col-8 p-3 pl-5 my-auto">
+    <div class="col-md-7 col-7 p-3 pl-5 my-auto">
       <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <button class="navbar-toggler ml-auto disply-flex" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
